# riskengine

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LEGAL.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: imbalance-study.md
docs/adr/: 003-pypi-dist-name.md  006-scorer-architecture.md  007-corpus-licence-posture.md  008-registry-and-score-contract.md  009-frozen-metric-protocol.md  010-feed-licence-posture.md  011-dependency-split.md  012-chapter-a-scope.md  README.md  adr-template.md
scripts/: audit_provenance.py  benchmark.py  build_url_features.py  explain_model.py  export_onnx.py  imbalance_study.py  publish_model.py  smoke_default_install.py  train_baseline.py
src/scamvet_riskengine/: __init__.py
src/scamvet_riskengine/data/: __init__.py  corpus.py  splits.py
src/scamvet_riskengine/eval/: __init__.py  aggregate.py  metrics.py
src/scamvet_riskengine/explain/: __init__.py  contributions.py  reasons.py
src/scamvet_riskengine/explain/data/: reason_templates_v1.json
src/scamvet_riskengine/features/: __init__.py  featurize.py  spec_loader.py  url.py
src/scamvet_riskengine/features/data/: brands_v1.json  shorteners_v1.json  url_keywords_v1.json
src/scamvet_riskengine/features/spec/: url_lexical_v1.json  url_lexical_v2.json  url_lexical_v3.json  url_lexical_v4.json  url_lexical_v5.json
src/scamvet_riskengine/models/: __init__.py  baseline.py  boosted.py  calibration.py  focal.py  onnx_export.py
src/scamvet_riskengine/models/url-scorer-lexical/0.1.0/: MODEL_CARD.md  manifest.json  model.onnx
src/scamvet_riskengine/registry/: __init__.py  manifest.py  scorer.py
tests/: test_focal.py  test_scorer_flags.py  test_smoke.py
tests/data/: test_corpus_and_splits.py
tests/eval/: test_aggregate.py  test_metrics.py
tests/explain/: test_reasons.py
tests/features/: test_featurize.py  test_url_features.py  test_url_spec_contract.py
tests/fixtures/: url_corpus_sample.csv
tests/models/: test_baseline_and_calibration.py  test_onnx_export.py
tests/registry/: test_registry.py
