[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scamvet-riskengine"
version = "0.0.0"
description = "Calibrated fraud & phishing risk scoring with SHAP + model registry."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ayush Gupta" }]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Development Status :: 1 - Planning",
]

dependencies = [
    "tldextract>=5.3,<6",
    "pandas>=2.1,<4",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "pyarrow>=15,<22",
    "xgboost>=2.0,<4",
    "lightgbm>=4.1,<5",
]

[project.optional-dependencies]
dev = ["ruff==0.6.9", "mypy==1.13.0", "pytest==8.3.3", "hypothesis>=6.100", "pytest-cov==5.0.0", "pre-commit==3.8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E702", "E703"]
