[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scamvet-riskengine"
version = "0.1.0"
description = "Calibrated phishing and fraud risk scoring with TreeSHAP reasons and a versioned model registry."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ayush Gupta" }]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["phishing", "fraud-detection", "url-classification", "threat-intelligence", "onnx", "shap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "tldextract>=5.3,<6",
  "pandas>=2.1,<4",
  "numpy>=1.26,<3",
  "onnxruntime>=1.17,<2",
]

[project.urls]
Homepage = "https://github.com/scamvet/riskengine"
Repository = "https://github.com/scamvet/riskengine"
Issues = "https://github.com/scamvet/riskengine/issues"

[project.optional-dependencies]
explain = ["xgboost>=2.0,<4"]
train = [
  "xgboost>=2.0,<4",
  "lightgbm>=4.1,<5",
  "scikit-learn>=1.4,<2",
  "pyarrow>=15",
  "imbalanced-learn>=0.12,<1",
  "onnxmltools>=1.12,<2",
  "skl2onnx>=1.16,<2",
]
dev = ["ruff==0.6.9", "mypy==1.13.0", "pytest==8.3.3", "hypothesis>=6.100", "pytest-cov==5.0.0", "pre-commit==3.8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E702", "E703"]

[tool.coverage.run]
source = ["src/scamvet_riskengine"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
